[package]
name = "rust-tetrominos"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.9.1"
derive_more = "0.99.17"
lazy_static = "1.4.0"
rand = "0.8.5"

[[bin]]
edition = "2021"
name = "rust-tetrominos"
path = "src/main.rs"
